# Neuron-IDE-runtime

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  StaticAnalysis.cmake
include/: DataWriter.hpp  EEGData.hpp  Parser.hpp  Runtime.hpp  Scene.hpp
include/components/: BlinkComponent.hpp  Component.hpp
include/config/: ChannelConfig.hpp  ConfigParser.hpp  ExperimentConfig.hpp  LSLConfig.hpp  OutputConfig.hpp
include/data_structures/: Context.hpp  EEGData.hpp  Marker.hpp
include/datawriter/: CSVFormatStrategy.hpp  DataFormatStrategyFactory.hpp  DataWriter.hpp  IDataFormatStrategy.hpp  Marker.hpp
include/lslreader/: LSLReader.hpp
include/parser/: Parser.hpp
include/renderer/: Renderer.hpp
include/scene/: Scene.hpp  SceneAll.hpp  SceneObject.hpp
include/scene/components/: BlinkComponent.hpp  Component.hpp  ComponentRegistry.hpp
protoFiles/: neuronide.proto
protoFiles/tests/: test_scene.pb  test_scene.pbtxt
src/: CMakeLists.txt  DataWriter.cpp  Parser.cpp  Runtime.cpp  main.cpp
src/config/: CMakeLists.txt  ConfigParser.cpp
src/datawriter/: CMakeLists.txt  CSVFormatStrategy.cpp  DataFormatStrategyFactory.cpp  DataWriter.cpp
src/lslreader/: CMakeLists.txt  LSLReader.cpp
src/parser/: CMakeLists.txt  Parser.cpp
src/renderer/: CMakeLists.txt  Renderer.cpp
src/scene/: CMakeLists.txt  Scene.cpp  SceneObject.cpp
src/scene/components/: BlinkComponent.cpp  ComponentRegistry.cpp
tests/: .clang-tidy  CMakeLists.txt  test_scene.pb
tests/component_tests/: CMakeLists.txt  dummy_component_test.cpp  parser_component_test.cpp
tests/unit_tests/: CMakeLists.txt  RendererTest.cpp  config_parser_test.cpp  data_format_strategy_factory_test.cpp  data_writer_test.cpp  dummy_unit_test.cpp  lslreader_test.cpp  parser_unit_test.cpp  runtime_test.cpp
tests/utils/: ParserTestUtils.hpp
